--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # _config.yml
 
 # Site settings
-title: Terry's Sample Website
-description: Objective: Demonstrate how to use GitHub Pages
-url: "https://terryg99.github.io" # Update with your GitHub Pages URL
-baseurl: "" # Should be empty for GitHub Pages, or the name of subfolder if the site is served in a subfolder
+# title: Terry's Sample Website
+# description: Objective: Demonstrate how to use GitHub Pages
+# url: "https://terryg99.github.io" # Update with your GitHub Pages URL
+# baseurl: "" # Should be empty for GitHub Pages, or the name of subfolder if the site is served in a subfolder
 
 # GitHub Pages settings
-repository: terryg99/SampleWebsite # Update with your GitHub repository
-branch: main # Update with your repository's main branch
+# repository: terryg99/SampleWebsite # Update with your GitHub repository
+# branch: main # Update with your repository's main branch
 
