--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # _config.yml
 
+title: My About Page
 # Site settings
 # title: Terry's Sample Website
 # description: Objective: Demonstrate how to use GitHub Pages
