--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # _config.yml
 
-title: My About Page
+title: My First About Page
 # Site settings
 # title: Terry's Sample Website
 # description: Objective: Demonstrate how to use GitHub Pages
