--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # _config.yml
 
-title: My Title (from config.yml file)
+# title: My Title (from config.yml file)
 # Site settings
 # title: Terry's Sample Website
 # description: Objective: Demonstrate how to use GitHub Pages
