--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # title: My Title (from config.yml file)
 # Site settings
-# title: Terry's Sample Website
+title: Terry's Website
 # description: Objective: Demonstrate how to use GitHub Pages
 # url: "https://terryg99.github.io" # Update with your GitHub Pages URL
 # baseurl: "" # Should be empty for GitHub Pages, or the name of subfolder if the site is served in a subfolder
